<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tv_menu" />
        <item
            android:id="@+id/nav_changepassword"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tv_change_password" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/tv_logout" />

        </menu>
    </item>

</menu>
