<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.FullscreenActivity">


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_nameapp"/>
        <ImageView

            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="200dp"
            android:layout_height="200dp"

            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="60dp"
            android:textSize="15dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_1"/>

        <TextView
            android:paddingLeft="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_2"
            android:textSize="15dp" />
    </LinearLayout>
</LinearLayout>